add citation for Lazard

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -778,7 +778,7 @@ One of the main ingredients in the proof of \Cref{CurveDieudonneTheorem} is a re
 \end{align*}
 These polynomials $w_n$, called \idxentry{ghost polynomials}, describe an injective logarithmic map \[(w_1, w_2, \ldots) \co \W \to \Ga^\infty,\] the image of which is characterized by the property $w_n(a) \equiv w_{n/p}(a)^p \pmod{p^j}$ for $p^j$ the maximum power of $p$ dividing $n$.  Over a $\Z_{(p)}$--algebra, there is a natural map on ghost components \[t(w_*(a_*))_{n'p^j} = (w_*(a_{p^j})),\] witnessing a decomposition $\W \times \Spec_{(p)} \cong \prod_{p \nmid n} \W_p$.  Both of these objects are natural limits of their truncations to finitely many power series product terms, and hence they both admit natural \emph{formal} objects, $\widehat{\W}$ and $\widehat{\W}_p$, by taking colimits of the formal completions of these truncations.
 
-\begin{lemma}[{\cite[Chapter 3]{ZinkCartierTheory}}]
+\begin{lemma}[{\cite[Chapter 3]{ZinkCartierTheory}, \cite[Section III.4]{LazardCFGs}}]
 There are natural correspondences
 \begin{align*}
 \CatOf{FormalGroups}(\widehat{\W}, \G) & \cong \CatOf{FormalSchemes}(\A^1, \G) = C\G, \\
