--- a/main.bib
+++ b/main.bib
@@ -1538,7 +1538,15 @@ MRREVIEWER = {Rui Miguel Saramago},
        URL = {http://dx.doi.org/10.1112/jtopol/jtr030},
 }
 
-@article {Lazard,
+@book{LazardCFGs,
+  title={Commutative formal groups},
+  author={Lazard, Michel P},
+  volume={443},
+  year={2006},
+  publisher={Springer}
+}
+
+@article {LazardGroupesDeLie,
     AUTHOR = {Lazard, Michel},
      TITLE = {Sur les groupes de {L}ie formels \`a un param\`etre},
    JOURNAL = {Bull. Soc. Math. France},
