--- a/mo.tex
+++ b/mo.tex
@@ -332,7 +332,7 @@ A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map \[\alp
 
 This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, essentially because the algebraic topologist's ``cohomology ring'' is not \emph{really} a ring at all---one is only allowed to consider sums of homogeneous degree elements.  This restriction stems directly from the provenance of cohomology rings: recall that \[\HFtwo^n X := \pi_{-n} F(\Susp^\infty_+ X, \HFtwo).\]  One can only form sums internal to a \emph{particular} homotopy group, using the cogroup structure on $\S^{-n}$.  On the other hand, the most basic ring of algebraic geometry is the polynomial ring, and hence their notion is adapted to handle, for instance, the potential degree drop when taking the difference of two (nonhomogeneous) polynomials of the same degree.
 
-We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $\HFtwo$ with the \index{periodified spectrum}periodified spectrum \[\HFtwo P = \bigvee_{j=-\infty}^\infty \Susp^j \HFtwo.\]  This spectrum becomes a ring in the homotopy category by using the factorwise multiplication maps \[\Susp^j \HFtwo \sm \Susp^k \HFtwo \simeq \Susp^{j+k} (\HFtwo \sm \HFtwo) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} \HFtwo.\]  This has the property that $\HFtwo P^0(X)$ is isomorphic to $\bigoplus_n \HFtwo^n(X)$ as ungraded rings,\footnote{This uses the equivalence $\bigvee_{j=-\infty}^\infty \Susp^j \HFtwo \to \prod_{j=-\infty}^\infty \Susp^j \HFtwo$ as well as finiteness of $X$.} but now we can make topological sense of the sum of two classes which used to live in different $\HFtwo$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
+We can modify our perspective very slightly to arrive at the algebraic geometers', by replacing $\HFtwo$ with the \index{periodified spectrum}periodified spectrum \[\HFtwo P = \bigvee_{j=-\infty}^\infty \Susp^j \HFtwo.\]  This spectrum becomes a ring in the homotopy category by using the factorwise multiplication maps \[\Susp^j \HFtwo \sm \Susp^k \HFtwo \simeq \Susp^{j+k} (\HFtwo \sm \HFtwo) \xrightarrow{\Susp^{j+k} \mu} \Susp^{j+k} \HFtwo.\]  This has the property that $\HFtwo P^0(X)$ is isomorphic to $\bigoplus_n \HFtwo^n(X)$ as ungraded rings,\footnote{This follows from the equivalence $\bigvee_{j=-\infty}^\infty \Susp^j \HFtwo \to \prod_{j=-\infty}^\infty \Susp^j \HFtwo$ and the finiteness of $X$.} but now we can make topological sense of the sum of two classes which used to live in different $\HFtwo$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ from \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
 
 Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the \index{Steenrod algebra}Steenrod algebra.  Naively approached, this does not fit into the framework we have been sketching so far: the Steenrod algebra arises as the homotopy endomorphisms of $\HFtwo$ and so is a \emph{noncommutative} algebra.  In turn, the action map
 \begin{center}
