fix the spacing on SU and SO in mathmode

--- a/preamble.tex
+++ b/preamble.tex
@@ -197,6 +197,8 @@
 \newcommand{\stack}[1]{\mathcal{#1}}
 \newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 
+\newcommand{\SO}{\mathit{SO}}
+\newcommand{\SU}{\mathit{SU}}
 \newcommand{\Spin}{\mathit{Spin}}
 \newcommand{\String}{\mathit{String}}
 \newcommand{\TMF}{\mathit{TMF}}
