--- a/intro.tex
+++ b/intro.tex
@@ -21,22 +21,22 @@ This forms a chain complex of monoids under disjoint union of manifolds, and its
 In fact, we can define a bordism theory $MG$ for any suitable family of structure groups $G(n) \to O(n)$.  The coefficient ring of $MG$, or its value $MG_*(*)$ on a point, gives the ring of $G$--bordism classes, and generally $MG_*(Y)$ gives a kind of ``bordism in families over the space $Y$''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:
 \begin{align*}
 MO & \to H\Z/2, &
-MSO & \to H\Z. \\
+M\SO & \to H\Z. \\
 \intertext{In both cases, we can evaluate on a point to get ring maps, called \index{genus}\textit{genera}:}
 MO_*(*) & \to \Z/2, &
-MSO_*(*) & \to \Z,
+M\SO_*(*) & \to \Z,
 \end{align*}
 neither of which is very interesting, since they're both zero in positive degrees.
 
-However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data than just the genus.  For instance, we can use it to extract a theory of \index{integral}integration as follows.  Consider the following special case of oriented bordism, where we evaluate $MSO_*$ on an infinite loopspace:
+However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data than just the genus.  For instance, we can use it to extract a theory of \index{integral}integration as follows.  Consider the following special case of oriented bordism, where we evaluate $M\SO_*$ on an infinite loopspace:
 \begin{align*}
-MSO_n K(\Z, n) & = \left\{ \text{oriented $n$--manifolds mapping to $K(\Z, n)$} \right\} / \sim \\
+M\SO_n K(\Z, n) & = \left\{ \text{oriented $n$--manifolds mapping to $K(\Z, n)$} \right\} / \sim \\
 & = \left. \left\{ \begin{array}{c}\text{oriented $n$--manifolds $Z$} \\ \text{with a specified class $\omega \in H^n(Z; \Z)$} \end{array}\right\} \middle/ \sim \right. .
 \end{align*}
 Associated to such a representative $(Z, \omega)$, the yoga of stable homotopy theory then allows us to build a composite
 \begin{align*}
-\S & \xrightarrow{\mathmakebox[2.5em]{(Z, \omega)}} MSO \sm (\S^{-n} \sm \Susp^\infty_+ K(\Z, n)) \\ 
-& \xrightarrow{\mathmakebox[2.5em]{\colim}} MSO \sm H\Z \\
+\S & \xrightarrow{\mathmakebox[2.5em]{(Z, \omega)}} M\SO \sm (\S^{-n} \sm \Susp^\infty_+ K(\Z, n)) \\ 
+& \xrightarrow{\mathmakebox[2.5em]{\colim}} M\SO \sm H\Z \\
 & \xrightarrow{\mathmakebox[2.5em]{\phi \sm 1}} H\Z \sm H\Z \\
 & \xrightarrow{\mathmakebox[2.5em]{\mu}} H\Z,
 \end{align*}
@@ -50,10 +50,10 @@ The integer obtained by the above process is $\int_Z \omega$. \qed
 
 Now take $G = e$ to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be investigated solely through the lens of framed bordism.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, through what stage does the unit map $Me \to E$ factor?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $SO \to O$ as the $0${\th} Postnikov--Whitehead truncation of $O$, we are inspired to use the rest of the \index{Postnikov filtration}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
+Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, through what stage does the unit map $Me \to E$ factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through $MO$---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing $\SO \to O$ as the $0${\th} Postnikov--Whitehead truncation of $O$, we are inspired to use the rest of the \index{Postnikov filtration}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
 \begin{tikzcd}
-Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\String \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & MSO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
+Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\String \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & M\SO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
 & & & kO & H\Z & H\Z/2.
 \end{tikzcd}
 \end{center}
