--- a/quillen.tex
+++ b/quillen.tex
@@ -996,7 +996,7 @@ This is the case of \Cref{CGenerationForFiniteCplx} where we set $X = *$.
 \end{proof}
 
 \begin{remark}
-This proof actually also goes through for $MO$ as well.  In that case, it's even easier, since the equation $2 = 0$ in $\pi_0 MO$ causes much of the algebra to collapse.  The proof does not extend further to cases like $MSO$ or $M\mathit{Sp}$, as explained in the introduction to this Case Study: these bordism theories do not have associated formal group laws, and so we lose the control we had in \Cref{StabilizingTheMUSteenrodOps}.
+This proof actually also goes through for $MO$ as well.  In that case, it's even easier, since the equation $2 = 0$ in $\pi_0 MO$ causes much of the algebra to collapse.  The proof does not extend further to cases like $M\SO$ or $M\mathit{Sp}$, as explained in the introduction to this Case Study: these bordism theories do not have associated formal group laws, and so we lose the control we had in \Cref{StabilizingTheMUSteenrodOps}.
 \end{remark}
 
 Take $\moduli{fgl}$ to be the moduli functor of formal group laws.  Since a formal group law is a power series satisfying some algebraic identities, this moduli object is an affine scheme with coordinate ring $\sheaf O_{\moduli{fgl}}$.  A rephrasing of \Cref{QuillenSurjective} is that the natural map \[\sheaf O_{\moduli{fgl}} \to MU_*\] is \emph{surjective}.  This is reason enough to start studying $\moduli{fgl}$ in earnest, which we take up in the next Case Study---but while we're here, if we anachronistically assume one algebraic fact about $\sheaf O_{\moduli{fgl}}$, \Cref{DummyLazardsThm}, we can prove that the natural map is actually an \emph{isomorphism}.  The place to start is with the following topological observation about mixing complex--orientations:
