simplify a sentence about Cotor

--- a/mo.tex
+++ b/mo.tex
@@ -603,7 +603,7 @@ There is an isomorphism \[\CatOf{Comodules}_A(k, N) = \CatOf{Modules}_k(k, k) \c
 Resolve $N$ using the cofree modules described above, then apply either functor $\CatOf{Comodules}_A(k, -)$ or $k \cotensor_A -$.  In both cases, you get the same complex.
 \end{proof}
 
-\noindent The second is that cofree comodules have particularly simple cotorsion:
+\noindent The second is that cofree comodules are cotorsion-free:
 
 \begin{corollary}\label{CotensorReducesCofreeness}
 Let $N = N' \otimes_k A$ be a cofree comodule. Then $N \cotensor_A k = N'$.
