--- a/finite.tex
+++ b/finite.tex
@@ -797,7 +797,7 @@ Equating these gives the condition in the Lemma statement.
 
 \todo[inline]{I would like a coordinate-independent model for this complex, which will hopefully make the following Corollary self-evident.}
 The key observation is that these two conditions appear as cocycle conditions for the first two levels of a natural cochain complex.
-\begin{definition}[{\cite[Section 3]{LazarevDeformations}}]
+\begin{definition}[{\cite[Section 3]{LazarevDeformations}}]\label{DeformationComplex}
 The \index{deformation complex}deformation complex\footnote{Pieces are of this complex are visible in work of Drinfel'd~\cite[Section 4.A]{Drinfeld} and of Lubin--Tate~\cite{LubinTate}, but neither actually assemble the whole complex.} $\widehat C^*(+_\Gamma; k)$ is defined by \[k \to k\ps{x_1} \to k\ps{x_1, x_2} \to k\ps{x_1, x_2, x_3} \to \cdots\] with differential
 \begin{align*}
 (df)(x_1, \ldots, x_{n+1}) & = \Gamma_1\left(\sumGamma_{i=1}^n x_i, x_{n+1} \right) \cdot f(x_1, \ldots, x_n) \\
