add references to other BP-type coordinates

--- a/main.bib
+++ b/main.bib
@@ -1275,6 +1275,17 @@ MRREVIEWER = {Andrew J. Baker},
 MRREVIEWER = {Joseph H. Silverman},
 }
 
+@article{JohnsonNoel,
+  title={For complex orientations preserving power operations, p-typicality is atypical},
+  author={Johnson, Niles and Noel, Justin},
+  journal={Topology and its Applications},
+  volume={157},
+  number={14},
+  pages={2271--2288},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article {JohnsonWilson,
     AUTHOR = {Johnson, David Copeland and Wilson, W. Stephen},
      TITLE = {{$BP$} operations and {M}orava's extraordinary {$K$}-theories},
@@ -1518,6 +1529,13 @@ MRREVIEWER = {Michael A. Hill},
 MRREVIEWER = {Rui Miguel Saramago},
        DOI = {10.2140/gt.2010.14.1111},
        URL = {http://dx.doi.org/10.2140/gt.2010.14.1111},
+}
+
+@article{LawsonSecondaryPowerOps,
+  title={Secondary power operations and the Brown-Peterson spectrum at the prime 2},
+  author={Lawson, Tyler},
+  journal={arXiv preprint arXiv:1703.00935},
+  year={2017}
 }
 
 @article {LawsonNaumann,
