--- a/finite.tex
+++ b/finite.tex
@@ -648,7 +648,7 @@ It's worth pointing out how strange all of this is. In Euclidean geometry, open 
 \end{remark}
 
 \begin{remark}
-The results of this section have several alternative forms in the literature.  For instance, $[p]_\phi(x)$ can also be expressed as \[[p]_\phi(x) = px + v_1 x^p + v_2 x^{p^2} + \cdots + v_d x^{p^d} + \cdots,\] where the sum is \emph{not} taken with respect to the group law, and this also determines a presentation of $\sheaf O_{\moduli{fgl}^{\ptyp}}$.  These other elements $v_d$, called \index{formal group!Hazewinkel coordinates}\textit{Hazewinkel coordinates}, differ substantially from the Kudo--Araki coordinates favored here, although they are equally ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.\footnote{In particular, it is a largely open question whether there is a (partial) coordinate patch that is compatible with the results of \Cref{PowerOpnsSection}.}\footnote{An unusual set of canonical generators is discussed in~\cite[Section V.10]{LazardCFGs}.}
+The results of this section have several alternative forms in the literature.  For instance, $[p]_\phi(x)$ can also be expressed as \[[p]_\phi(x) = px + v_1 x^p + v_2 x^{p^2} + \cdots + v_d x^{p^d} + \cdots,\] where the sum is \emph{not} taken with respect to the group law, and this also determines a presentation of $\sheaf O_{\moduli{fgl}^{\ptyp}}$.  These other elements $v_d$, called \index{formal group!Hazewinkel coordinates}\textit{Hazewinkel coordinates}, differ substantially from the Kudo--Araki coordinates favored here, although they are equally ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.\footnote{In particular, it is a largely open question whether there is a (partial) coordinate patch that is compatible with the results of \Cref{PowerOpnsSection}, though there are partial results along these lines~\cite{JohnsonNoel,LawsonSecondaryPowerOps,LawsonNaumann,StricklandProductsOnModules}.}\footnote{An unusual set of canonical generators is discussed in~\cite[Section V.10]{LazardCFGs}.}
 \end{remark}
 
 \begin{remark}[{\cite[Section IV.9]{LazardCFGs}, \cite[Section 17.5]{Hazewinkel}}]\label{ArtinHasseExponential}
@@ -1280,7 +1280,7 @@ The arithmetically-minded reader might recognize this description of $\Aut \Gamm
 \end{remark}
 
 \begin{example}[{Adams, \cite[Lemma 2.5]{HMS}}]\label{piLK1SExample}
-In the case $d = 1$, the objects involved are small enough that we can compute them by hand.  To begin, we have an isomorphism $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$, and the action of this group on $\pi_* E_1 = \Z_p[u^\pm]$ is by $\gamma \cdot u^n \mapsto \gamma^n u^n$.  At odd primes $p$, one computes\footnote{At odd primes, $p$ is coprime to the order of the torsion part of $\Z_p^\times$.  At $p = 2$, this is not true, so the representation has infinite cohomological dimension and there is plenty of room for differentials in the ensuing $E_{\G_m}$--Adams spectral sequence..} \[H^s(\operatorname{Aut}(\Gamma_1); \pi_* E_1) = \begin{cases}\Z_p & \text{when $s = 0$}, \\ \bigoplus_{j = 2(p-1)k} \Z_p\{u^j\} / (pk u^j) & \text{when $s = 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  This, in turn, gives the calculation\footnote{The groups $\pi_* \widehat L_1 \S$ are familiar to homotopy theorists: the Adams conjecture~\cite{AdamsJXIV} (and its solution) implies that the $J$--homomorphism $J_{\C}\co BU \to BGL_1 \S$ described in \Cref{DefnRealJHomomorphism} and \Cref{ComplexJHomomorphism} selects exactly these elements for nonnegative $t$.}
+In the case $d = 1$, the objects involved are small enough that we can compute them by hand.  To begin, we have an isomorphism $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$, and the action of this group on $\pi_* E_1 = \Z_p[u^\pm]$ is by $\gamma \cdot u^n \mapsto \gamma^n u^n$.  At odd primes $p$, one computes\footnote{At odd primes, $p$ is coprime to the order of the torsion part of $\Z_p^\times$.  At $p = 2$, this is not true, so the representation has infinite cohomological dimension and there is plenty of room for differentials in the ensuing $E_{\G_m}$--Adams spectral sequence.} \[H^s(\operatorname{Aut}(\Gamma_1); \pi_* E_1) = \begin{cases}\Z_p & \text{when $s = 0$}, \\ \bigoplus_{j = 2(p-1)k} \Z_p\{u^j\} / (pk u^j) & \text{when $s = 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  This, in turn, gives the calculation\footnote{The groups $\pi_* \widehat L_1 \S$ are familiar to homotopy theorists: the Adams conjecture~\cite{AdamsJXIV} (and its solution) implies that the $J$--homomorphism $J_{\C}\co BU \to BGL_1 \S$ described in \Cref{DefnRealJHomomorphism} and \Cref{ComplexJHomomorphism} selects exactly these elements for nonnegative $t$.}
 \[
 \pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when $t = 0$}, \\ \Z_p / (pk) & \text{when $t = k|v_1| - 1$}, \\ 0 & \text{otherwise}. \end{cases}
 \]
