--- a/preamble.tex
+++ b/preamble.tex
@@ -1,9 +1,11 @@
 % -*- root: main.tex -*-
 
+\usepackage{natbib}
+
 \usepackage[pdftex,
             pdfauthor={Eric Peterson},
             pdftitle={Formal Geometry and Bordism Operations},
-            backref]{hyperref}
+            backref=page]{hyperref}
 
 \usepackage[protrusion=true,expansion=true]{microtype}
 % \usepackage{savetrees}
@@ -372,4 +374,11 @@
 % set the default arrow style
 \tikzset{>=stealth}
 \tikzcdset{arrow style=tikz}
+
+
+% make backrefs look pretty
+\makeatletter
+\patchcmd{\BR@backref}{\newblock}{\newblock(page~}{}{}
+\patchcmd{\BR@backref}{\par}{)\par}{}{}
+\makeatother
 
