remove many todos

--- a/powerops.tex
+++ b/powerops.tex
@@ -1132,8 +1132,7 @@ The presence of such interesting arithmetic invariants (Bernoulli numbers, Berno
 \end{remark}
 
 \begin{remark}
-Some more open questions about this can be found in 
-\todo[inline]{Mike has some open questions about the end of this analysis (and in particular about the fiber of the Atkin map that appears in the $K(1)$--local analysis of $\tmf$, an analogue of the chromatic splitting fiber) at the end of his talk notes \textit{The $\String$ orientation of $\tmf$}.  Some of that should be copied here.}
+Some more open questions about this which emphasize the connection to number theory can be found at the end of one of Hopkins's Talbot talks~\cite{HopkinsTheStringOrientation}.
 \end{remark}
 
 
