--- a/mo.tex
+++ b/mo.tex
@@ -67,7 +67,7 @@ BO(n) \arrow[equal]{r} & BO(n) \times * \arrow["\operatorname{id} \times \text{t
 \end{tikzcd}
 \end{center}
 \begin{corollary}\label{DefnRealJHomomorphism}
-The operations of block--sum and topological join imbue the colimiting spaces $BO$ and $B\GL_1 \S$ with the structure of $H$--groups\todo{Should you justify ``group'' rather than ``space''?}.  Moreover, the colimiting map \[J_{\R}\co BO \to B\GL_1 \S,\] called the \idxentry[J homomorphism]{$J$--homomorphism}, is a morphism of $H$--groups. \qed
+The operations of block--sum and topological join imbue the colimiting spaces $BO$ and $B\GL_1 \S$ with the structure of $H$--groups.  Moreover, the colimiting map \[J_{\R}\co BO \to B\GL_1 \S,\] called the \idxentry[J homomorphism]{$J$--homomorphism}, is a morphism of $H$--groups. \qed
 \end{corollary}
 \noindent Finally, we can ask about the compatibility of Thom constructions with all of this.  In order to properly phrase the question, we need a version of the construction which operates on stable spherical bundles, i.e., whose source is the slice category over $B\GL_1 \S$.  By calculating \[T_{n+1}(\xi \ast \text{triv}) \simeq \Susp T_n(\xi),\] we are inspired to make the following definition:
 
@@ -344,7 +344,6 @@ Our route to finding this internally occurring $\alpha^*$ is by turning to the n
 will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the Steenrod algebra is a Hopf algebra\footnote{The construction of both the Hopf algebra diagonal here and the coaction map below is somewhat ad hoc.  We will give a more robust presentation in \Cref{StableContextLecture}.}, using the map \[[\HFtwo, \HFtwo]_* \xrightarrow{\mu^*} [\HFtwo \sm \HFtwo, \HFtwo]_* \cong [\HFtwo, \HFtwo]_* \otimes [\HFtwo, \HFtwo]_*\] as the diagonal.  This Hopf algebra structure is actually cocommutative---this is a rephrasing of the symmetry of the \index{Cartan formula}Cartan formula: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]  It follows that the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, and hence $\Spec \mathcal A_*$ would make a reasonable algebro-geometric object.
 
 Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$.  By assuming that $X$ is a finite complex, we can write it as the Spanier--Whitehead dual $X = DY$ of some other finite complex $Y$.  Starting with the action map on $\HFtwo^* Y$:
-\todo{Make sure these intertexts have the correct margins.}
 \begin{align*}
 \mathcal A^* \otimes \HFtwo^* Y & \to \HFtwo^* Y \\
 \intertext{we take the $\F_2$--linear dual to get a \index{coaction map}coaction map}
@@ -360,7 +359,7 @@ Having produced the action map $\alpha$, we are now moved to study $\alpha$ as w
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) \tag{coassociativity} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = \tag{ring homomorphism} \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \tag{characteristic $2$}. \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \circ \lambda^*(x). \tag{characteristic $2$} \\
 \intertext{Then, turning to the right-hand side:}
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
@@ -389,7 +388,7 @@ x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
 Applying \Cref{GradedAndGmEquivAgree} thus selects the original degree $n$ classes.
 \end{proof}
 
-Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} $lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
+Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics---so little, in fact, that we will freely move between the graded homotopy groups of a spectrum and the $0${\th} homotopy group of a periodic spectrum throughout the rest of this book.  The thrust of this Lemma, however, is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} $lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
 The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2).\]
@@ -446,14 +445,9 @@ In summary, the formula $\RP^\infty_{\HFtwo P} \cong \G_a$ is meant to point out
 
 \vspace{-2\baselineskip}\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
-In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  But, even without a construction, it is instructive to see how this comes about from a moral perspective.
+In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  Still, even without a construction, it is instructive to see how this comes about from a moral perspective.
 
-\begin{remark}
-\todo{This belongs somewhere else.}
-Throughout this Lecture, we will work with graded homology groups, rather than with periodified cohomology as was the case in \Cref{TheSteenrodAlgebraSection}.  This choice will remain mysterious for now, but we can at least reassure ourselves that it carries the same data as we were studying previously.  Referring to our discussion of the construction of the coaction map, we see that without taking Spanier--Whitehead duals we already have an analogous coaction map on homology: $H\F_{2*} X \to H\F_{2*} X \otimes \mathcal A_*$.  Additionally, building on the discussion in \Cref{AutGaHasStableCoopns}, the splitting of the Hopf algebra shows that we are free to work gradedly or work with the periodified version of mod--$2$ homology, while still retaining the rest of the framework.
-\end{remark}
-
-With this caveat out of the way, begin by considering the following three self-maps of the stable sphere:
+Begin by considering the following three self-maps of the stable sphere:
 \begin{center}
 \begin{tikzcd}
 \S^0 \arrow["0"]{r} & \S^0, &
@@ -550,7 +544,6 @@ A map $f\co \Spec S \to \Spec R$ induces maps $f^* \dashv f_*$ of categories of 
 \end{center}
 \end{definition}
 
-\todo{Using ``$\pi_*$'' in this way is confusing for topologists. Name the structure morphism something else (and be consistent about this later in the book).}
 One of the main uses of these operations is to define the cohomology of a sheaf.  Let $\pi\co X \to \Spec k$ be a scheme over $\Spec k$, $k$ a field, and let $\sheaf F$ be a sheaf over $X$.  The adjunction above induces a derived adjunction \[\Ext_X(\pi^* k, \sheaf F) \cong \Ext_{\Spec k}(k, R\pi_* \sheaf F),\] which is used to translate the \emph{definition} of sheaf cohomology to that of the cohomology of the derived pushforward $R\pi_* \sheaf F$, itself interpretable as a mere complex of $k$--modules.  This pattern is very general: the sense of ``cohomology'' relevant to a situation is often accessed by taking the derived pushforward to a suitably terminal object.\footnote{This perspective often falls under the heading of ``six--functor formalism''.}  To invent a notion of cohomology for comodules over a Hopf algebra, we are thus moved to produce push and pull functors for a map of Hopf algebras, and this is best motivated by another example.
 
 \begin{example}\label{HopfAlgebrasFromFiniteGroups}
@@ -805,6 +798,5 @@ MO_* MO & = \pi_* MO \sm MO = \pi_* MO \sm_{\HFtwo} (\HFtwo \sm MO) \\
 Hence, a point in $\Spec MO_* MO$ consists of a pair of points in $\Spec MO_*$ and $\Spec \HFtwo_* MO$, which we have already identified respectively as formal group laws with vanishing $2$--series, a property, and formal group laws with specified logarithms, data.  This description can be amplified to capture all of the structure maps: a formal group law with vanishing $2$--series admits a logarithm, which indicates how the composition and conjugation maps of \Cref{FHGivesComodules} behave.
 \end{remark}
 
-\todo{A referee suggested mentioning the resolution of Steenrod's realization problem.}
 
 
