--- a/preface.tex
+++ b/preface.tex
@@ -21,7 +21,7 @@
 
 This book owes an incredible amount to an incredible number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe very large debts to Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care, as well as for having worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
 
-Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.  He emphasized that mathematics done in isolation, rather than in maximal connection to other people, is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.\footnote{I have a clear memory of delivering a grad student seminar talk during my first year, where my mathematical sibling, George Melvin, asked me why $\G_m$ was called the multiplicative formal group.  I looked at him, looked at the board, and cautiously offered, ``\ldots because of the mixed term in the group law?''  Silly as it seems, this book has been shaped in no small way by striving to correct for this single highly inarticulate incident, where it was revealed that I did not understand the original context of these tools that topologists were borrowing.  Although everyone starts learning from somewhere and not-knowing something is no cause for lasting embarrassment, it is certainly still helpful to receive pushes in the direction of intellectual responsibility.  Thanks, George.}  It is up to the reader to determine whether I have actually succeeded at this, and any failure of mine in this regard can't possibly be visited upon him.
+Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.  He emphasized that mathematics done in isolation, rather than in maximal connection to other people, is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.\footnote{I have a clear memory of delivering a grad student seminar talk during my first year, where my mathematical sibling, George Melvin, asked me why $\G_m$ was called the multiplicative formal group.  I looked at him, looked at the board, and cautiously offered, ``\ldots because of the mixed term in the group law?''  Silly as it seems, this book has been shaped in no small way by striving to correct for this single highly inarticulate incident, where it was revealed that I did not understand the original context of these tools that topologists were borrowing.  Although everyone starts learning from somewhere and not-knowing something is no cause for lasting embarrassment, it is certainly still helpful to receive pushes in the direction of intellectual responsibility.  Thanks, George.}\footnote{It is, of course, up to the reader to determine whether I have actually succeeded at this, and, of course, any failure of mine in this regard can't possibly be visited upon him.}
 
 More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time and time again, in the hopes that I would someday get it.
 
@@ -31,14 +31,13 @@ This book also draws on a lot of unpublished material.  The topology community g
 
 In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{sseqpages}), Dexter Chua (an outside consultant who helped translate the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence that I speak about it and his further help in preparing that talk).
 
-More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a very bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.
+More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a very bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.\footnote{Between him and Dorin, I do wonder if there's a Fossey-esque novel in the works: \textit{Topologists in the Mists}.  Hopefully we came off as gentle creatures, uncannily similar to proper mathematicians once you get to know us.}
 
-Additionally, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Jon Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Mike Hill, Johan Konter, Achim Krause, Akhil Mathew, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Andrew Senger, and Sean Tilson.
-\todo{Acknowledge the publisher}
+On top of the students, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Jon Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Mike Hill, Johan Konter, Achim Krause, Akhil Mathew, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Andrew Senger, and Sean Tilson.  Additionally, the referees (as well as the publishers themselves) have been \emph{enormously} helpful in editing this into a passable document.
 
 Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be half the open and vibrant person that I am today, and I would know so much less of myself.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
 
 Thanks to my many friends here, and thanks also to Thomas Dunning especially.  Thanks, everyone.  Theveryone.
 
 \vspace{2\baselineskip}
-\hspace{3em} --Eric
+\hspace{3em} ------------Eric
