fix chapter rectos

--- a/preamble.tex
+++ b/preamble.tex
@@ -373,6 +373,10 @@
 \tikzset{>=stealth}
 \tikzcdset{arrow style=tikz}
 
+% put rectos back into \chapter
+\makeatletter
+\patchcmd{\chapter}{\clearpage}{\cleardoublepage}{}{\error}
+\makeatother
 
 % make backrefs look pretty
 \renewcommand*{\backref}[1]{}
