--- a/cooperations.tex
+++ b/cooperations.tex
@@ -646,7 +646,7 @@ The \index{invariant differential!cohomologically invariant}\textit{cohomologica
 \begin{example}{\cite[Lemma 5.1.2]{Katz}}
 Consider the case that $A$ is torsion-free (or ``$\Z$--flat'', if you like), and set $K = A \otimes \Q$ so that $A \to K$ is an injection.  In this case the differentiation map $x A\ps{x} \to A\ps{x}$ is an injection and integration of power series is possible in $K$, so we can re-express first the definition of $H^1_{dR}$ and second the conditions on our algebraic differentials in the following diagram of exact rows:
 \begin{center}
-\begin{tikzcd}[column sep=0.5em]
+\begin{tikzcd}[column sep=0.5em, row sep=0.2em]
 0 \arrow{r} & \left\{\begin{array}{c}\text{integrals} \\ \text{with $A$} \\ \text{coeff\textsuperscript{s}}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all formal integrals} \\ \text{of differentials} \\ \text{defined over $A$}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{missing} \\ \text{integrals}\end{array}\right\} \arrow{r} \arrow[equal]{d} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} & \{f \in x K\ps{x} \mid df \in A\ps{x}dx\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}df \in A\ps{x}dx, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & PH^1_{dR}(\G/A) \arrow{r} \arrow{u} & 0,
